[tool.poetry]
name = "fluxio-parser"
version = "1.1.0"
description = "Fluxio parser library"
authors = ["Jonathan Drake <jdrake@narrativescience.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
astor = ">=0.8.1,<1"
black = "^22.3.0"
networkx = "^2.8.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
